--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \input{classicthesis-config}
 
 \usepackage[utf8]{inputenc}
+\usepackage[spanish]{babel}
 
 \usepackage{titletoc}
 \usepackage{tikz}
@@ -102,12 +103,14 @@
     breaklines=true,
     breakatwhitespace=false,
     captionpos=b,
-    escapeinside={(*@}{@*)},
+    escapeinside={(*@){(@*)}}
 }
 
 \usepackage{pgfplots}
-\usepackage[linesnumbered,ruled,vlined,spanish,onelanguage]{algorithm2e}
+\usepackage[linesnumbered,ruled,vlined,spanish,onelanguage,noend]{algorithm2e}
+
 \newcommand{\pp}[1]{{\color{blue}\bf [PP: #1]}}
+
 
 \lstnewenvironment{algorithm1}[1][] %defines the algorithm listing environment
 {   
