--- a/agradecimientos.tex
+++ b/agradecimientos.tex
@@ -1,5 +1,6 @@
 %!TEX root = main.tex
-\chapter*{Agradecimientos}
+\chapter{Agradecimientos}
 \label{cap:agradecimientos}
 
 \cacho{Completar}
+\newpage
