--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,3 @@
-%\documentclass[12pt,a4paper,openany]{report} %a4paper,
 
 \documentclass[a4paper, 12pt]{report}
 
@@ -102,9 +101,8 @@
     frame=none,
     breaklines=true,
     breakatwhitespace=false,
-    captionpos=b,
-    escapeinside={(*@){(@*)}}
-}
+    captionpos=b
+    }
 
 \usepackage{pgfplots}
 \usepackage[linesnumbered,ruled,vlined,spanish,onelanguage,noend]{algorithm2e}
